# surf-ace-compositor

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: adversarial-pass-clean-spec-impl-2026-04-06-round2.md  adversarial-pass-clean-spec-impl-2026-04-06-round3.md  adversarial-pass-clean-spec-impl-2026-04-06.md  adversarial-pass-drm-kms-output-ownership-2026-04-06.md  adversarial-pass-host-atomic-direct-present-substrate-2026-04-07.md  adversarial-pass-host-atomic-plane-role-routing-2026-04-08.md  adversarial-pass-host-atomic-present-management-2026-04-07.md  adversarial-pass-host-atomic-zpos-ordering-2026-04-08.md  adversarial-pass-host-client-render-coverage-2026-04-07.md  adversarial-pass-host-commit-present-failure-recovery-2026-04-07.md  adversarial-pass-host-direct-present-lifecycle-2026-04-07.md  adversarial-pass-host-direct-render-present-substrate-2026-04-07.md  adversarial-pass-host-dmabuf-protocol-global-truth-2026-04-08.md  adversarial-pass-host-dmabuf-runtime-status-truth-2026-04-08.md  adversarial-pass-host-gbm-egl-render-substrate-2026-04-06.md  adversarial-pass-host-hotplug-rebind-2026-04-07.md  adversarial-pass-host-overlay-alpha-format-preference-2026-04-08.md  adversarial-pass-host-overlay-alpha-safe-gating-2026-04-08.md  adversarial-pass-host-overlay-blend-control-gating-2026-04-10.md  adversarial-pass-host-overlay-explicit-blend-mode-gating-2026-04-10.md  adversarial-pass-host-overlay-plane-local-render-2026-04-08.md  adversarial-pass-host-overlay-plane-primary-partition-2026-04-08.md  adversarial-pass-host-overlay-plane-rotation-gating-2026-04-08.md  (+27 more)
(+34 files in other folders)
