[package]
name = "surf-ace-compositor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
smithay = { version = "0.7.0", default-features = false, features = ["backend_winit", "backend_drm", "backend_gbm", "backend_udev", "backend_session_libseat", "wayland_frontend"] }
rustix = "1.0.7"
